--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node src/app.ts",
         "dev:nodemon": "nodemon -b 7",
         "build": "rimraf ./dist && tsc",
-        "start": "npm run build && node dist/app.js"
+        "start": "npm run build && node dist/app.js",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "keywords": [],
     "author": "Raul Rodriguez",
     "license": "ISC",
     "devDependencies": {
+        "@types/jest": "^29.5.12",
         "@types/node": "^20.11.24",
         "@types/yargs": "^17.0.32",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.0",
+        "supertest": "^6.3.4",
+        "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     },
